syntax = "proto3";
package proto;

option go_package = "./pb";

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    uint32 quantity = 5;
    string seller_id = 6;
}

message PostProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
    uint32 quantity = 4;
    string seller_id = 5;
}

message PostProductResponse {
    Product product = 1;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message GetProductsRequest {
    uint64 skip = 1;
    uint64 take = 2;
    repeated string ids = 3;
    string query = 4;
}

message GetProductsResponse {
    repeated Product products = 1;
}

message UpdateProductRequest {
    Product product = 1;
}

message UpdateProductResponse {
    string id = 1;
}

message UpdateQuantityRequest {
    repeated string ids = 1;
    repeated uint32  quantity = 2;
}

message UpdateQuantityResponse {
    repeated string ids = 1;
}

service CatalogService {
    rpc PostProduct (PostProductRequest) returns (PostProductResponse) {}

    rpc GetProduct (GetProductRequest) returns (GetProductResponse) {}
    rpc GetProducts (GetProductsRequest) returns (GetProductsResponse) {}

    rpc UpdateProduct (Product) returns (Product) {}
    rpc UpdateQuantity (UpdateQuantityRequest) returns (UpdateQuantityResponse) {}
}